--- a/pwa/index.html
+++ b/pwa/index.html
@@ -46,10 +46,10 @@
 
 <h3>Buy some tokens</h3>
 <p>
-    <input class="token-recipient" type="text" value=""
+    <input class="token-recipient" type="text" value="0x51f8a5d539582eb9bf2f71f66bcc0e6b37abb7ca"
            maxlength="42" minlength="42" size="42" required placeholder="Token recipient (address)"><br>
     <input class="token-email" type="email" value="derp@ragelse.dk" required><br>
-    <input class="token-amount-to-buy" type="currency" max="100" min="0" placeholder="Amount" value="6" required> DKK
+    <input class="token-amount-to-buy" type="number" max="100" min="0" placeholder="Amount" value="6" required> DKK
     <button class="token-button" type="button">Purchase</button>
 </p>
 
