switch to using GET

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -5,65 +5,76 @@
 <title>Title</title>
 <script async src="https://checkout.stripe.com/checkout.js"></script>
 <script defer>
-function sendToken(token, amount, recipient) {
-  const url = 'https://us-central1-chiemgauer-203318.cloudfunctions.net/charge'
+  function sendToken (token, amount, recipient) {
+    const url = 'https://us-central1-chiemgauer-203318.cloudfunctions.net/charge'
+        + `?token=${token}&amount=${amount}&recipient=${recipient}`
 
-  const req = new Request(url, {
-    headers: {"Content-Type": "application/json"},
-    method: "POST",
-    url,
-    mode: 'cors',
-    body: {
-      amount,
-      token,
-      recipient
-    }
-  })
-  fetch(req)
-    .then(() => alert('OK! Expect the tokens to arrive within a few minutes.'))
-    .catch(() => alert('Error sending token request.'))
-}
-
-window.addEventListener('load', () => {
-console.assert(!!StripeCheckout, "StripeCheckout should be defined")
-const handler = StripeCheckout.configure({
-  key: 'pk_test_wbX0FkGoH0wY8QajKTihIjw8',
-  image: 'https://stripe.com/img/documentation/checkout/marketplace.png',
-  locale: 'auto',
-  token: function(token) {
-    console.debug("Created a charge-token...")
-    const amountDkk = parseInt( document.querySelector('.token-amount-dkk').value , 10)
-    const amountCents = parseInt( document.querySelector('.token-amount-cents').value , 10)
-    const amount = Math.floor((amountDkk * 100) + amountCents)
-    // post this to a cloud function
-    const recipient = document.querySelector('.token-recipient').value
-    const debugString = `${token.id} ${amount} ${recipient}`
-    console.debug(debugString)
-    // document.querySelector('.debug').textContent = debugString
-    sendToken(token, amount, recipient)
+    const req = new Request(url, {
+      headers: {
+          'Content-Type': 'application/json',
+     },
+      method: 'GET',
+      url,
+      mode: 'cors',
+    })
+    fetch(req)
+      .then(() => alert('OK! Expect the tokens to arrive within a few minutes.'))
+      .catch((err) => {
+        console.error(err)
+          alert('Error sending token request.')
+      })
   }
-});
 
-document.querySelector('.token-button').addEventListener('click', function(e) {
-  // Open Checkout with further options:
-  const amount = parseInt( document.querySelector('.token-amount-to-buy').value ) * 100
-  handler.open({
-    email: document.querySelector('.token-email').value,
-    name: 'Buy tokens',
-    description: 'some tokens',
-    currency: 'dkk',
-    allowRememberMe: false,
-    amount,
-  });
-  e.preventDefault();
-});
+  function getAmountCents () {
+    const amountDkk = parseInt(document.querySelector('.token-amount-dkk').value, 10)
+    const amountCents = parseInt(document.querySelector('.token-amount-cents').value, 10)
+    const cents = Math.floor((amountDkk * 100) + amountCents)
+    return cents
+  }
+
+  window.addEventListener('load', () => {
+    console.assert(!!StripeCheckout, 'StripeCheckout should be defined')
+
+    const handler = StripeCheckout.configure({
+      key: 'pk_test_wbX0FkGoH0wY8QajKTihIjw8',
+      image: 'https://stripe.com/img/documentation/checkout/marketplace.png',
+      locale: 'auto',
+      token: function (token) {
+        console.debug('Created a charge-token...')
+
+        const amount = getAmountCents()
+        // post this to a cloud function
+        const recipient = document.querySelector('.token-recipient').value
+        const debugString = `${token.id} ${amount} ${recipient}`
+        console.debug(debugString)
+        // document.querySelector('.debug').textContent = debugString
+        sendToken(token.id, amount, recipient)
+      }
+    })
+
+    // TEST
+    // sendToken("tok_123", getAmountCents(), document.querySelector('.token-recipient').value)
+
+    document.querySelector('.token-button').addEventListener('click', (e) => {
+      // Open Checkout with further options:
+      const amount = getAmountCents()
+      handler.open({
+        email: document.querySelector('.token-email').value,
+        name: 'Buy tokens',
+        description: 'some tokens',
+        currency: 'dkk',
+        allowRememberMe: false,
+        amount,
+      })
+      e.preventDefault()
+    })
 
 // Close Checkout on page navigation:
-window.addEventListener('popstate', function() {
-  handler.close();
-})
+    window.addEventListener('popstate', function () {
+      handler.close()
+    })
 
-})
+  })
 </script>
 </head>
 <body>
@@ -73,8 +84,9 @@ window.addEventListener('popstate', function() {
     <input class="token-recipient" type="text" value="0x51f8a5d539582eb9bf2f71f66bcc0e6b37abb7ca"
            maxlength="42" minlength="42" size="42" required placeholder="Token recipient (address)"><br>
     <input class="token-email" type="email" value="derp@ragelse.dk" required><br>
-    DKK <input class="token-amount-dkk" type="number" max="9999" min="0" placeholder="Amount" value="6" size="4" required>
-        <input class="token-amount-cents" type="number" max="100" min="0" placeholder="Amount" value="45" size="2" required>
+    DKK <input class="token-amount-dkk" type="number" max="9999" min="0" placeholder="Amount" value="6"
+               size="4" required>
+    <input class="token-amount-cents" type="number" max="100" min="0" placeholder="Amount" value="45" size="2" required>
     <button class="token-button" type="button">Purchase</button>
 </p>
 
