--- a/pwa/index.html
+++ b/pwa/index.html
@@ -1,98 +1,99 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Title</title>
-<script async src="https://checkout.stripe.com/checkout.js"></script>
-<script defer>
-  function sendToken (token, amount, recipient) {
-    const url = 'https://us-central1-chiemgauer-203318.cloudfunctions.net/charge'
-        + `?token=${token}&amount=${amount}&recipient=${recipient}`
-
-    const req = new Request(url, {
-      headers: {
-          'Content-Type': 'application/json',
-     },
-      method: 'GET',
-      url,
-      mode: 'cors',
-    })
-    fetch(req)
-      .then(() => alert('OK! Expect the tokens to arrive within a few minutes.'))
-      .catch((err) => {
-        console.error(err)
-          alert('Error sending token request.')
-      })
-  }
-
-  function getAmountCents () {
-    const amountDkk = parseInt(document.querySelector('.token-amount-dkk').value, 10)
-    const amountCents = parseInt(document.querySelector('.token-amount-cents').value, 10)
-    const cents = Math.floor((amountDkk * 100) + amountCents)
-    return cents
-  }
-
-  window.addEventListener('load', () => {
-    console.assert(!!StripeCheckout, 'StripeCheckout should be defined')
-
-    const handler = StripeCheckout.configure({
-      key: 'pk_test_wbX0FkGoH0wY8QajKTihIjw8',
-      image: 'https://stripe.com/img/documentation/checkout/marketplace.png',
-      locale: 'auto',
-      token: function (token) {
-        console.debug('Created a charge-token...')
-
-        const amount = getAmountCents()
-        // post this to a cloud function
-        const recipient = document.querySelector('.token-recipient').value
-        const debugString = `${token.id} ${amount} ${recipient}`
-        console.debug(debugString)
-        // document.querySelector('.debug').textContent = debugString
-        sendToken(token.id, amount, recipient)
-      }
-    })
-
-    // TEST
-    // sendToken("tok_123", getAmountCents(), document.querySelector('.token-recipient').value)
-
-    document.querySelector('.token-button').addEventListener('click', (e) => {
-      // Open Checkout with further options:
-      const amount = getAmountCents()
-      handler.open({
-        email: document.querySelector('.token-email').value,
-        name: 'Buy tokens',
-        description: 'some tokens',
-        currency: 'dkk',
-        allowRememberMe: false,
-        amount,
-      })
-      e.preventDefault()
-    })
-
-// Close Checkout on page navigation:
-    window.addEventListener('popstate', function () {
-      handler.close()
-    })
-
-  })
-</script>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="vendor/foundation.min.css">
+    <link rel="stylesheet" href="style.css">
+    <script async src="https://checkout.stripe.com/checkout.js"></script>
+    <!--<script>-->
+    <!--document.querySelector('[src="https://checkout.stripe.com/checkout.js"]').addEventListener('load', () => {-->
+    <!--console.debug("nice")-->
+    <!--})-->
+    <!--</script>-->
+    <script type="module">
+      import "./main.js"
+    </script>
+    <title>Buy/sell Chiemgauer</title>
 </head>
-<body>
+<body class="text-white bg-blue1">
+<div class="grid-container full grid-y half-height">
+    <div class="cell small-6
+                    bg-orange1">
+        <div class="grid-x  align-center-middle" style="height: 100%">
+            <div class="cell small-11 medium-9 large-7">
+                <form class="grid-x grid-margin-x margin-vertical-1">
+                    <h5 class="cell auto">
+                        BUY
+                    </h5>
+                    <h5 class="cell shrink">
+                        1 GMC = 1 DKK
+                    </h5>
 
-<h3>Buy some tokens</h3>
-<p>
-    <input class="token-recipient" type="text" value="0x51f8a5d539582eb9bf2f71f66bcc0e6b37abb7ca"
-           maxlength="42" minlength="42" size="42" required placeholder="Token recipient (address)"><br>
-    <input class="token-email" type="email" value="derp@ragelse.dk" required><br>
-    DKK <input class="token-amount-dkk" type="number" max="9999" min="0" placeholder="Amount" value="6"
-               size="4" required>
-    <input class="token-amount-cents" type="number" max="100" min="0" placeholder="Amount" value="45" size="2" required>
-    <button class="token-button" type="button">Purchase</button>
-</p>
+                    <div class="medium-12 cell">
+                        <div class="input-group">
+                            <label class="input-group-label">Address</label>
+                            <input class="input-group-field token-recipient" type="text" value="0x51f8a5d539582eb9bf2f71f66bcc0e6b37abb7ca"
+                                   maxlength="42" minlength="42" size="42" required placeholder="Token recipient (address)">
+                        </div>
+                    </div>
+                    <div class="medium-6 cell">
+                        <div class="input-group">
+                            <span class="input-group-label">CMG</span>
+                            <input class="token-amount-token input-group-field" type="number" max="2500" min="0" placeholder="Amount (CGM)" value="8.99" size="9" required>
+                        </div>
+                    </div>
+                    <div class="medium-6 cell">
+                        <div class="input-group">
+                            <span class="input-group-label">DKK</span>
+                            <input class="token-amount-dkk input-group-field" type="number" max="2500" min="0" placeholder="Amount (DKK)" value="8.99" size="9" required>
+                        </div>
+                    </div>
+                    <div class="cell medium-12">
+                        <button class="token-button primary button expanded" type="button">Continue to Payment Gateway</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="cell small-6
+                    bg-blue1">
+        <div class="grid-x  align-center-middle" style="height: 100%">
+            <div class="cell small-11 medium-9 large-7">
+                <form class="grid-x grid-margin-x margin-vertical-1">
+                    <h5 class="cell auto">
+                        SELL
+                    </h5>
+                    <h5 class="cell shrink">
+                        1 CMG = 0.95 DKK
+                    </h5>
 
-<hr>
-<h6>Log:</h6>
-<pre class="debug"></pre>
+                    <div class="medium-12 cell">
+                        <div class="input-group">
+                            <label class="input-group-label">Address</label>
+                            <input class="input-group-field token-recipient" type="text" value="0x51f8a5d539582eb9bf2f71f66bcc0e6b37abb7ca"
+                                   maxlength="42" minlength="42" size="42" required placeholder="Token recipient (address)">
+                        </div>
+                    </div>
+                    <div class="medium-6 cell">
+                        <div class="input-group">
+                            <span class="input-group-label">CMG</span>
+                            <input class="token-amount-token input-group-field" type="number" max="2500" min="0" placeholder="Amount (CGM)" value="8.99" size="9" required>
+                        </div>
+                    </div>
+                    <div class="medium-6 cell">
+                        <div class="input-group">
+                            <span class="input-group-label">DKK</span>
+                            <input class="token-amount-dkk input-group-field" type="number" max="2500" min="0" placeholder="Amount (DKK)" value="8.99" size="9" required>
+                        </div>
+                    </div>
+                    <div class="cell medium-12">
+                        <button class="token-button primary button expanded" type="button">Place order</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
