apply exchange rate to input fields

--- a/pwa/index.html
+++ b/pwa/index.html
@@ -32,24 +32,24 @@
                     <div class="medium-12 cell">
                         <div class="input-group">
                             <label class="input-group-label">Address</label>
-                            <input class="input-group-field token-recipient" type="text" value="0x51f8a5d539582eb9bf2f71f66bcc0e6b37abb7ca"
+                            <input class="input-group-field token-recipient" type="text" value="0x51f8a5d539582eb9bf2f71f66bcc0e6b37abb7ca" tabindex="0"
                                    maxlength="42" minlength="42" size="42" required placeholder="Token recipient (address)">
                         </div>
                     </div>
                     <div class="medium-6 cell">
                         <div class="input-group">
                             <span class="input-group-label">CMG</span>
-                            <input class="token-amount-token input-group-field" type="number" max="2500" min="0" placeholder="Amount (CGM)" value="8.99" size="9" required>
+                            <input class="buy-amount-token input-group-field" type="number" max="2500" min="0" step="0.01" placeholder="Amount (CMG)" value="10" size="9" required tabindex="-1">
                         </div>
                     </div>
                     <div class="medium-6 cell">
                         <div class="input-group">
                             <span class="input-group-label">DKK</span>
-                            <input class="token-amount-dkk input-group-field" type="number" max="2500" min="0" placeholder="Amount (DKK)" value="8.99" size="9" required>
+                            <input class="buy-amount-dkk input-group-field" type="number" max="2500" min="0" step="0.01" placeholder="Amount (DKK)" value="10" size="9" required tabindex="1">
                         </div>
                     </div>
                     <div class="cell medium-12">
-                        <button class="token-button primary button expanded" type="button">Continue to Payment Gateway</button>
+                        <button class="token-button primary button expanded" tabindex="2" type="button">Continue to Payment Gateway</button>
                     </div>
                 </form>
             </div>
@@ -70,24 +70,24 @@
                     <div class="medium-12 cell">
                         <div class="input-group">
                             <label class="input-group-label">Address</label>
-                            <input class="input-group-field token-recipient" type="text" value="0x51f8a5d539582eb9bf2f71f66bcc0e6b37abb7ca"
+                            <input class="input-group-field token-recipient" type="text" value="0x51f8a5d539582eb9bf2f71f66bcc0e6b37abb7ca" tabindex="3"
                                    maxlength="42" minlength="42" size="42" required placeholder="Token recipient (address)">
                         </div>
                     </div>
                     <div class="medium-6 cell">
                         <div class="input-group">
                             <span class="input-group-label">CMG</span>
-                            <input class="token-amount-token input-group-field" type="number" max="2500" min="0" placeholder="Amount (CGM)" value="8.99" size="9" required>
+                            <input class="sell-amount-token input-group-field" tabindex="4" type="number" step="0.01" max="2500" min="0" placeholder="Amount (CMG)" value="20" size="9" required>
                         </div>
                     </div>
                     <div class="medium-6 cell">
                         <div class="input-group">
                             <span class="input-group-label">DKK</span>
-                            <input class="token-amount-dkk input-group-field" type="number" max="2500" min="0" placeholder="Amount (DKK)" value="8.99" size="9" required>
+                            <input class="sell-amount-dkk input-group-field" tabindex="-1" type="number" step="0.01" max="2500" min="0" placeholder="Amount (DKK)" value="19" size="9" required>
                         </div>
                     </div>
                     <div class="cell medium-12">
-                        <button class="token-button primary button expanded" type="button">Place order</button>
+                        <button class="token-button primary button expanded" type="button" tabindex="5">Place order</button>
                     </div>
                 </form>
             </div>
