--- a/pwa/index.html
+++ b/pwa/index.html
@@ -26,7 +26,7 @@
                         BUY
                     </h5>
                     <h5 class="cell shrink">
-                        1 GMC = 1 DKK
+                        1 CMG = 1 DKK
                     </h5>
 
                     <div class="medium-12 cell">
